blender crash itself while importing a dae (collide) file #102860
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#102860
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94
Blender Version
Broken: version: 3.3.1, branch: master, commit date: 2022-10-04 18:35, hash:
b292cfe5a9
Broken: version: 2.82 and all versions in between then and now
Worked: n/a
Short description of error
Hi, I'm using blender version 3.3 on a windows 10 downloaded on steam.
when i try to import dae files, blender crashes itself and shuts down
(this only happens with some dae files, not all and the ones who crash are not to big ).
I tried to search with powershell to find the problem and I got this:
Error: EXCEPTION_ACCESS_VIOLATION
bgr_darryls_ship_ground.dae
Added subscriber: @mtw1000
#102859 was marked as duplicate of this issue
Added subscriber: @mod_moder
Added subscriber: @deadpin
Changed status from 'Needs Triage' to: 'Needs User Info'
There was no need to create a new bug, you could have just Edited the other one. In any case, we need to be provided with the .dae file that crashes so we can reproduce the issue and verify a fix (if any).
Please attach a small and freely available .dae file to this report here.
Changed status from 'Needs User Info' to: 'Confirmed'
Added subscriber: @ltx
I can't open your DAE file with substance painter because : "Unsupported vertex referencing scheme"
i think is corrupted.
I always use the DAE file with Blender and it is perfect.
Is there a way i can uncorrupt the file?
I'm not sure if I set up new issue for this - but I'm experiencing this only with blender 4.0 beta, 3.6.x works fine
I have similar issue with the .dae file if it contains armature/skeleton - any attempt on import attached file will end up in blender crash.
This file is an collada export of makehuman app. though if I don't set up armature, the file would be imported correctly.